update READ button, REMOVE button, add word wrap to prevent overflow of text

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
     margin:0px;
     padding: 0px;
     background-color: #f0eef1;
+    word-wrap: break-word;
 }
 
 .header{
@@ -104,6 +105,7 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 15px;
     padding: 20px 10px;
     font-family: typewriter,sans-serif;
@@ -111,6 +113,8 @@ h3{
     border-top: 50px solid var(--bg);
     border-radius:18px;
     box-shadow: 0px 0px 10px 0px darkgrey;
+    word-break: break-word;
+    text-align: center;
 }
 
 .book button{
